nestc/src/sema/snapshots/nestc__sema__tests__lir_snapshot_an_allocation_that_escapes_gets_no_drop.snap
---
source: src/sema/tests.rs
expression: lir_text(src)
---
type Node = struct {           // was a struct; size 4, align 4
  v: i32                    // +0
}
type []u8 = struct {           // was a slice; size 16, align 8
  ptr: *u8                    // +0
  len: u64                    // +8
}
type usize = struct {           // was a distinct; size 8, align 8
  0: u64                    // +0
}
type core.Location = struct {           // was a struct; size 24, align 8
  file: core.str                    // +0
  line: u32                    // +16
  column: u32                    // +20
}
type core.str = struct {           // was a distinct; size 16, align 8
  0: []u8                    // +0
}
type (usize, bool) = struct {           // was a tuple; size 16, align 8
  0: usize                    // +0
  1: bool                    // +8
}

func build() -> *mut Node  // _NC5build
  let _0: *mut Node
  let _1: *mut Node
  let p_2: *mut Node
bb0:                    // entry
  _0 := $new()
    @safepoint { live: [] }
  _1 := _0
  p_2 := _1
  p_2.*.v = 1
  return p_2
