nestc/src/sema/snapshots/nestc__sema__tests__lir_snapshot_an_array_constant_is_a_value_and_indexing_one_needs_a_place.snap
---
source: src/sema/tests.rs
expression: lir_text(src)
---
type []u8 = struct {           // was a slice; size 16, align 8
  ptr: *u8                    // +0
  len: u64                    // +8
}
type usize = struct {           // was a distinct; size 8, align 8
  0: u64                    // +0
}
type core.Location = struct {           // was a struct; size 24, align 8
  file: core.str                    // +0
  line: u32                    // +16
  column: u32                    // +20
}
type core.str = struct {           // was a distinct; size 16, align 8
  0: []u8                    // +0
}
type (usize, bool) = struct {           // was a tuple; size 16, align 8
  0: usize                    // +0
  1: bool                    // +8
}

func from_constant() -> i32  // _NC13from_constant
  let _0: [3]i32
  let _1: *[3]i32
  let _2: *i32
bb0:                    // entry
  _0 := { 1, 2, 3 }
  _1 := &_0
  _2 := &_1.*[1]
  return _2.*

func from_local() -> i32  // _NC10from_local
  let _0: [3]i32
  let _1: [3]i32
  let t_2: [3]i32
  let _3: *[3]i32
  let _4: *i32
bb0:                    // entry
  _0 := array(1, 2, 3)
  _1 := _0
  t_2 := _1
  _3 := &t_2
  _4 := &_3.*[1]
  return _4.*
