nestc/src/sema/snapshots/nestc__sema__tests__lir_snapshot_an_extern_function_has_no_blocks.snap
---
source: src/sema/tests.rs
expression: lir_text(src)
---
type []u8 = struct {           // was a slice; size 16, align 8
  ptr: *u8                    // +0
  len: u64                    // +8
}
type usize = struct {           // was a distinct; size 8, align 8
  0: u64                    // +0
}
type core.Location = struct {           // was a struct; size 24, align 8
  file: core.str                    // +0
  line: u32                    // +16
  column: u32                    // +20
}
type core.str = struct {           // was a distinct; size 16, align 8
  0: []u8                    // +0
}
type (usize, bool) = struct {           // was a tuple; size 16, align 8
  0: usize                    // +0
  1: bool                    // +8
}

extern("c") func puts(s_0: *u8) -> i32  // puts
  // declaration only

func shout(s_0: *u8) -> i32  // _NC5shout
  let _1: i32
bb0:                    // entry
  _1 := call puts(s_0)
    @safepoint { live: [s_0]
      s_0 := reloc s_0
    }
  return _1
