nestc/src/sema/snapshots/nestc__sema__tests__lir_snapshot_defer_is_a_block_every_exit_jumps_through.snap
---
source: src/sema/tests.rs
expression: lir_text(src)
---
type core.str = struct {           // was a distinct; size 16, align 8
  0: []u8                    // +0
}
type []u8 = struct {           // was a slice; size 16, align 8
  ptr: *u8                    // +0
  len: u64                    // +8
}

func cleanup() -> void  // _NC7cleanup
bb0:                    // entry
  return

func run(n_0: i32) -> i32  // _NC3run
  let _1: i32
  let _2: bool
  let _3: i32
  let _4: i32
  let _5: i32
  let _6: bool
  let _7: i32
  let _8: i32
bb0:                    // entry
  _1 := cast 10 : comptime_int -> i32
  _2 := n_0 > _1
  switch _2 { 1 => bb1, _ => bb2 }
bb1:                    // then
  _3 := cast 1 : comptime_int -> i32
  _4 := _3
  goto bb5
bb2:                    // else
  goto bb3
bb3:                    // join
  _5 := cast 5 : comptime_int -> i32
  _6 := n_0 > _5
  switch _6 { 1 => bb6, _ => bb7 }
bb4:                    // return
  return _4
bb5:                    // defer 0 (return)
  call cleanup()
  goto bb4
bb6:                    // then
  _7 := cast 2 : comptime_int -> i32
  _4 := _7
  goto bb5
bb7:                    // else
  goto bb8
bb8:                    // join
  _8 := cast 3 : comptime_int -> i32
  _4 := _8
  goto bb5
