nestc/src/sema/snapshots/nestc__sema__tests__lir_snapshot_dividing_by_zero_is_a_check_of_its_own.snap
---
source: src/sema/tests.rs
expression: lir_text(src)
---
type core.Location = struct {           // was a struct; size 24, align 8
  file: core.str                    // +0
  line: u32                    // +16
  column: u32                    // +20
}
type core.str = struct {           // was a distinct; size 16, align 8
  0: []u8                    // +0
}
type []u8 = struct {           // was a slice; size 16, align 8
  ptr: *u8                    // +0
  len: u64                    // +8
}
type (i32, bool) = struct {           // was a tuple; size 8, align 4
  0: i32                    // +0
  1: bool                    // +4
}
type usize = struct {           // was a distinct; size 8, align 8
  0: u64                    // +0
}
type (usize, bool) = struct {           // was a tuple; size 16, align 8
  0: usize                    // +0
  1: bool                    // +8
}

func by_value(a_0: i32, b_1: i32) -> i32  // _NC8by_value
  let _2: bool
  let _3: core.Location
  let _4: (i32, bool)
  let _5: core.Location
bb0:                    // entry
  _2 := b_1 != 0
  switch _2 { 1 => bb2, _ => bb1 }
bb1:                    // division by zero
  _3 := Location("mem:main", 1, 51)
  call core.panic("division by zero", _3)
    @safepoint { live: [_3]
      _3 := reloc _3
    }
  unreachable
bb2:
  _4 := checked_div(a_0, b_1)
  switch _4.overflowed { 1 => bb3, _ => bb4 }
bb3:                    // overflow
  _5 := Location("mem:main", 1, 51)
  call core.panic("integer overflow", _5)
    @safepoint { live: [_5]
      _5 := reloc _5
    }
  unreachable
bb4:
  return _4.0

func by_constant(a_0: i32) -> i32  // _NC11by_constant
  let _1: (i32, bool)
  let _2: core.Location
bb0:                    // entry
  _1 := checked_rem(a_0, 2)
  switch _1.overflowed { 1 => bb1, _ => bb2 }
bb1:                    // overflow
  _2 := Location("mem:main", 2, 46)
  call core.panic("integer overflow", _2)
    @safepoint { live: [_2]
      _2 := reloc _2
    }
  unreachable
bb2:
  return _1.0
