nestc/src/sema/snapshots/nestc__sema__tests__lir_snapshot_indexing_a_slice_is_pointer_arithmetic.snap
---
source: src/sema/tests.rs
expression: lir_text(src)
---
type []i32 = struct {           // was a slice; size 16, align 8
  ptr: *i32                    // +0
  len: u64                    // +8
}
type usize = struct {           // was a distinct; size 8, align 8
  0: u64                    // +0
}
type (i32, bool) = struct {           // was a tuple; size 8, align 4
  0: i32                    // +0
  1: bool                    // +4
}
type core.str = struct {           // was a distinct; size 16, align 8
  0: []u8                    // +0
}
type []u8 = struct {           // was a slice; size 16, align 8
  ptr: *u8                    // +0
  len: u64                    // +8
}

func read(s_0: []i32, a_1: [3]i32, k_2: usize) -> i32  // _NC4read
  let _3: *[]i32
  let _4: *i32
  let _5: *[3]i32
  let _6: *i32
  let _7: (i32, bool)
  let _8: never
bb0:                    // entry
  _3 := &s_0
  _4 := _3.*.ptr + k_2 * stride(i32)
  _5 := &a_1
  _6 := &_5.*[k_2]
  _7 := checked_add(_4.*, _6.*)
  switch _7.overflowed { 1 => bb1, _ => bb2 }
bb1:                    // overflow
  _8 := $panic("integer overflow")
  unreachable
bb2:
  return _7.0
