nestc/src/sema/snapshots/nestc__sema__tests__lir_snapshot_places_are_paths.snap
---
source: src/sema/tests.rs
expression: lir_text(src)
---
type Outer = struct {           // was a struct; size 4, align 4
  i: Inner                    // +0
}
type Inner = struct {           // was a struct; size 4, align 4
  v: i32                    // +0
}
type []mut i32 = struct {           // was a slice; size 16, align 8
  ptr: *mut i32                    // +0
  len: u64                    // +8
}
type usize = struct {           // was a distinct; size 8, align 8
  0: u64                    // +0
}
type core.Location = struct {           // was a struct; size 24, align 8
  file: core.str                    // +0
  line: u32                    // +16
  column: u32                    // +20
}
type core.str = struct {           // was a distinct; size 16, align 8
  0: []u8                    // +0
}
type []u8 = struct {           // was a slice; size 16, align 8
  ptr: *u8                    // +0
  len: u64                    // +8
}

func reach(o_0: *mut Outer, xs_1: []mut i32, k_2: usize) -> void  // _NC5reach
  let _3: *[]mut i32
  let _4: bool
  let _5: core.Location
  let _6: *mut i32
bb0:                    // entry
  o_0.*.i.v = 1
  _3 := &xs_1
  _4 := k_2 < _3.*.len
  switch _4 { 1 => bb2, _ => bb1 }
bb1:                    // out of bounds
  _5 := Location("mem:main", 5, 3)
  call core.panic("index out of bounds", _5)
    @safepoint { live: [_5]
      _5 := reloc _5
    }
  unreachable
bb2:
  _6 := _3.*.ptr + k_2 * stride(i32)
  _6.* = o_0.*.i.v
  return
